client/src/components/Header.css
.logo{
  font-size: 3rem; 
  font-family: 'Lato', sans-serif;
}

.header-container--flex{
    display: flex;
    position: relative;
    z-index: 4;
    flex-direction: column;
}

.header-account-nav{
    display: flex;
    justify-content: flex-end;
}

.header-site-nav{
    display: flex;
    justify-content: space-between;
}

nav{
    display: flex;
    width: 30%;
}

.site-nav-list{
    display: flex;
    justify-content: space-between;
    width: 100%;
    align-items: center;
}

.account-nav-list{
    display: flex;
    align-items: center;
    justify-content: space-between;
    font-size: .9rem;
}

.account-head{
  display: flex;
}


.page-head{
    display: inline-block;
    margin-top: 40px;
    margin-bottom: 60px;
    overflow: visible;
}

.page-head h1{
  font-weight: 300;
}


.overlay {
  position: fixed;
  width: 100%;
  height:100%;
  background:#000;
  opacity: .5;
  top:60px;
  left: 0;
  right: 0;
  bottom: 0;
  display: none;
  z-index: 2;
  cursor: pointer;
}

.overlay--show {
  display:block
}

.frame{
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    width: 400px;
    height: 400px;
    background-color: #f4c842;
  }
  
.hold{
    display: flex;
    flex-direction: column;
    justify-content: center;
    cursor: pointer;
    height: auto
}
  
.bar {
    box-sizing: border-box;
    width: 40px;
    height: 4px;
    background-color: rgb(48, 48, 48);
    border-radius: 5px;
    box-shadow: 1px 1px 5px #9e9e9e;
    margin-bottom: 5px;
    transition: background-color .2s ease-in-out;
  }

  .bar:last-child{
    margin-bottom: initial;
  }
  .bar-top {
    animation: animateTop-reverse 0.3s cubic-bezier(0.3, 0.13, 0.6, 0.89) forwards;
  }
  .bar-mid {
    animation: animateMid-reverse 0.3s cubic-bezier(0.3, 0.13, 0.6, 0.89) forwards;
  }
  .bar-low {
    animation: animateLow-reverse 0.3s cubic-bezier(0.3, 0.13, 0.6, 0.89) forwards;
  }
  
  .active .bar-top {
    animation: animateTop 0.3s cubic-bezier(0.3, 0.13, 0.6, 0.89) forwards;
  }
  .active .bar-mid {
    animation: animateMid 0.3s cubic-bezier(0.3, 0.13, 0.6, 0.89) forwards;
  }
  .active .bar-low {
    animation: animateLow 0.3s cubic-bezier(0.3, 0.13, 0.6, 0.89) forwards;
  }
  
  .no-animation {
    -webkit-animation: none !important;
    -moz-animation: none !important;
    -o-animation: none !important;
    animation: none !important;
  }


@keyframes animateTop{
  0% {
    transform: translate(0, 0) rotate(0deg);
  }
  50% {
    transform: translate(0, 9px) rotate(0);
  }
  100% {
    transform: translate(0, 9px) rotate(45deg);
  }
}

@keyframes animateMid{
  from{
    opacity: 1;
    transform: scale(1);
  }
  to{
    transform: scale(0);
    opacity: 0;
  }
}

@keyframes animateLow{
  0% {
    transform: translate(0, 0) rotate(0);
  }
  50% {
    transform: translate(0, -9px) rotate(0);
  }
  100% {
    transform: translate(0, -9px) rotate(135deg);
  }
}

@keyframes animateTop-reverse{
  0% {
    transform: translate(0, 9px) rotate(45deg);
  }
  50% {
    transform: translate(0, 9px) rotate(0deg);
  }
  100% {
    transform: translate(0, 0) rotate(0deg);
  }
}

@keyframes animateMid-reverse{
  from{
    opacity: 0;
    transform: scale(0);
  }
  to{
    transform: scale(1);
    opacity: 1;
  }
}

@keyframes animateLow-reverse{
  0% {
    transform: translate(0, -9px) rotate(135deg);
  }
  50% {
    transform: translate(0, -9px) rotate(0);
  }
  100% {
    transform: translate(0, 0) rotate(0);
  }
}




@media only screen and (max-width: 600px) {
    .logo{
      font-size: 2rem;
      margin: 0;
    }

    .header-container--flex{
        flex-direction: row;
        top: 0;
        position: fixed;
        z-index: 10;
        background-color: white;
        width: 100%;
        justify-content: space-between;
        align-items: center;
        height: 60px;
        border-bottom: 1px solid #8d8d8d;
    }

    .header-nav-container{
      display: flex;
      align-items: center;
    }

    .header-account-nav,
    .global-nav{
      position: absolute;
      top: 60px;
      left: 0;
      right: 0;
      z-index: 10;
      width:100%;
      background-color: white;

    }

    .header-site-nav{
        display: flex;
        flex-direction: column;
        width: 100%;
        margin-left: 5px;
    }

    

    .header-account-container,
    .header-global-nav-container{
      width:100%;
    }

    .header-global-nav-container{
      margin-left: 5px;
    }

    
    .account-nav-list,
    .global-nav-list,
    .site-nav-list{
        display: flex;
        flex-direction: column;
        border-bottom: 1px solid #8d8d8d;
        border-radius: 5px;
        width: 100%;
    }

    
    .site-nav-list__item,
    .account-nav-list__item{
      width:100%;
      font-size: 1.2em;
    }

    .account-nav-list__item a,
    .site-nav-list__item a{
      display: block;
      text-align: center;
      padding: 20px 0;
      
    }

    .account-nav-notifications{
      display: flex;
      justify-content: center;
      align-items: center;
    }
    
    .page-head{
      margin-top: 80px;
      margin-bottom: initial;
    }


    .header-notification-container{
      position: relative;
    }
}

